--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.0.0",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/svelte": "^5.0.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "astro": "^4.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-smartypants": "^2.0.0"
+    "remark-smartypants": "^2.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
