--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/svelte": "^5.0.0",
     "@astrojs/tailwind": "^6.0.0",
+    "@fontsource-variable/roboto-condensed": "^5.1.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^4.0.1",
